@@ -160,18 +160,22 @@
 
 
 (clos:defgeneric stream-read-sequence (sequence stream &key start end)
-  (:method (sequence (stream fundamental-binary-input-stream) &key start end)
-    (stream-read-byte-sequence sequence stream start end))
-  (:method (sequence (stream fundamental-character-input-stream) &key start end)
-    (stream-read-char-sequence sequence stream start end))
+  (:method (sequence (stream fundamental-binary-input-stream)
+            &key (start 0) (end nil))
+    (stream-read-byte-sequence stream sequence start end))
+  (:method (sequence (stream fundamental-character-input-stream)
+            &key (start 0) (end nil))
+    (stream-read-char-sequence stream sequence start end))
   (:method (sequence (stream fundamental-input-stream) &rest rest)
     (apply #'sys::%read-sequence sequence stream rest)))
 
 (clos:defgeneric stream-write-sequence (sequence stream &key start end)
-  (:method (sequence (stream fundamental-binary-output-stream) &key start end)
-    (stream-write-byte-sequence sequence stream start end))
-  (:method (sequence (stream fundamental-character-output-stream) &key start end)
-    (stream-write-char-sequence sequence stream start end))
+  (:method (sequence (stream fundamental-binary-output-stream)
+            &key (start 0) (end nil))
+    (stream-write-byte-sequence stream sequence start end))
+  (:method (sequence (stream fundamental-character-output-stream)
+            &key (start 0) (end nil))
+    (stream-write-char-sequence stream sequence start end))
   (:method (sequence (stream fundamental-output-stream) &rest rest)
     (apply #'sys::%write-sequence sequence stream rest)))
 
