@@ -1,3 +1,7 @@
+2008-05-28  Sam Steingold  <sds@gnu.org>
+
+	* streamslong.tst (gray-out): test stream-write-sequence et al
+
 2008-05-12  Sam Steingold  <sds@gnu.org>
 
 	* tests.lisp (kill-down, rmrf, prepare-dir, show-file, finish-file):
